tests/base/valid/Process_Valid_3.whiley
import * from whiley.lang.*

void ::main(System.Console sys):
    x = sys.out
    x.println("GOT HERE")
